// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`command-line checker comments and comment layout reports noncanonical leading line-comment formatting 1`] = `
"test/fixtures/leading-line-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // The answer
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical documentation-comment formatting 1`] = `
"test/fixtures/documentation-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /// The answer
  | ^
  |
test/fixtures/documentation-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/documentation-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical block-comment formatting 1`] = `
"test/fixtures/block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /* The answer */
  | ^
  |
test/fixtures/block-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/block-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical multiline block-comment formatting 1`] = `
"test/fixtures/multiline-block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /*
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | val answer=42
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:11: error[format/equals-spacing]: expected one space around '='
  |
5 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical module documentation-comment formatting 1`] = `
"test/fixtures/module-documentation-comment.qnt:1:1: error[format/comment-indentation]: expected no indentation at the source level
  |
1 |  /// Module documentation
  | ^
  |
test/fixtures/module-documentation-comment.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical trailing line-comment formatting 1`] = `
"test/fixtures/trailing-line-comment.qnt:2:18: error[format/comment-spacing]: expected one space before a trailing comment
  |
2 |   val answer = 42// The answer
  |                  ^^
  |
"
`;

exports[`command-line checker comments and comment layout reports a misindented trailing module-body comment 1`] = `
"test/fixtures/trailing-module-comment.qnt:4:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
4 | // Kept for future work
  | ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical trailing source comments 1`] = `
"test/fixtures/trailing-source-comments.qnt:3:1: error[format/comment-indentation]: expected no indentation at the source level
  |
3 |  /*! answer !*/
  | ^
  |
test/fixtures/trailing-source-comments.qnt:3:2: error[format/source-comment-separation]: expected one blank line before a trailing source comment
  |
3 |  /*! answer !*/
  |  ^^^^^^^^^^^^^^
  |
test/fixtures/trailing-source-comments.qnt:4:1: error[format/source-comment-separation]: expected one blank line before a trailing source comment
  |
4 | /*! 1 + 1 !*/
  | ^^^^^^^^^^^^^
  |
"
`;

exports[`command-line checker comments and comment layout reports a misindented comment-only module 1`] = `
"test/fixtures/comment-only-module.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // Intentionally empty
  | ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical inline-comment formatting 1`] = `
"test/fixtures/inline-comment.qnt:2:16: error[format/comment-spacing]: expected one space before an inline comment
  |
2 |   val total = 1/* left */+2
  |                ^^
  |
test/fixtures/inline-comment.qnt:2:26: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 |   val total = 1/* left */+2
  |                          ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical binary-right comment formatting 1`] = `
"test/fixtures/binary-right-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/binary-right-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | pure val answer=true and
  | ^
  |
test/fixtures/binary-right-comment.qnt:2:16: error[format/equals-spacing]: expected one space around '='
  |
2 | pure val answer=true and
  |                ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical nested-definition comment formatting 1`] = `
"test/fixtures/nested-definition-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/nested-definition-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/nested-definition-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/nested-definition-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical local trailing-comment formatting 1`] = `
"test/fixtures/local-definition-trailing-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/local-definition-trailing-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/local-definition-trailing-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/local-definition-trailing-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42 // Preserve this local comment.
  |           ^
  |
test/fixtures/local-definition-trailing-comment.qnt:4:1: error[format/nested-definition-layout]: expected the nested definition body on a new line
  |
4 | answer
  | ^^^^^^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical local definition-body comment formatting 1`] = `
"test/fixtures/local-definition-body-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/local-definition-body-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/local-definition-body-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/local-definition-body-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=
  |           ^
  |
test/fixtures/local-definition-body-comment.qnt:6:1: error[format/nested-definition-layout]: expected the nested definition body on a new line
  |
6 | answer
  | ^^^^^^
  |
"
`;
